# wspectre

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_capture.py  test_decode.py  test_security.py  test_timing.py
wspectre/: __init__.py  capture.py  cli.py  client.py  decode.py  timing.py
