[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wspectre"
version = "0.1.0"
description = "hear what the wire is really saying — a websocket reconnaissance tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "saxx" }]
keywords = ["websocket", "reverse-engineering", "security", "protocol", "recon"]
dependencies = ["websockets>=13"]

[project.optional-dependencies]
msgpack = ["msgpack>=1"]
dev = ["pytest>=8", "msgpack>=1"]

[project.scripts]
wspectre = "wspectre.cli:main"

[tool.setuptools]
packages = ["wspectre"]
